[package]
name = "zetasketch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
j4rs = "0.22.0"
prost = "0.13.5"
thiserror = "2.0.12"

[build-dependencies]
j4rs = "0.22.0"
fs_extra = "1.3"
regex = "1.10"
prost-build = "0.13.5"
anyhow = "1.0.97"

[dev-dependencies]
assert2 = "0.3.15"
