[package]
name = "zetasketch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1" # Required by prost
byteorder = "1"
log = "0.4"
thiserror = "1.0"
ordered-float = "5.0.0"
protobuf = "3.7.2"
itertools = "0.14.0"
once_cell = "1.19"

[build-dependencies]
prost-build = "0.12" 
protobuf-codegen = "3.7.2"
j4rs = { path = "/home/daniel.vratil/personal/j4rs/rust" }

[dev-dependencies]
assert2 = "0.3"
approx = "0.5.1"
base64 = "0.22"
rand = "0.9"
j4rs = { path = "/home/daniel.vratil/personal/j4rs/rust" }

