[package]
name = "zetasketch-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "java",
]

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1" # Required by prost
byteorder = "1"
thiserror = "1.0"
ordered-float = "5.0"
protobuf = "3.7"
itertools = "0.14"
once_cell = "1.19"

[build-dependencies]
prost-build = "0.12" 
protobuf-codegen = "3.7"

[dev-dependencies]
assert2 = "0.3"
approx = "0.5"
rand = "0.9"
zetasketch-java = { path = "java" }
