[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zetasketch-py"
description = "Python bindings for zetasketch-rs - unofficial Rust reimplementation of the ZetaSketch Java library for HyperLogLog++ implementation used by Google BigQuery and BigTable."
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Daniel Vrátil", email = "me@dvratil.cz" },
]
keywords = ["zetasketch", "hyperloglog", "google", "hll", "sketch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/danvratil/zetasketch-rs"
Repository = "https://github.com/danvratil/zetasketch-rs"
Documentation = "https://docs.rs/zetasketch-rs"
Issues = "https://github.com/danvratil/zetasketch-rs/issues"

[tool.maturin]
module-name = "zetasketch_py"
