[package]
name = "zetasketch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
prost-types = "0.12"
bytes = "1" # Required by prost
byteorder = "1"
log = "0.4"
thiserror = "1.0"
ordered-float = "5.0.0"
protobuf = "3.7.2"
itertools = "0.14.0"

# TODO: Add a specific hashing library if Fingerprint2011 proves too difficult to replicate exactly,
# or if a well-tested crate exists for it. For now, we plan to implement it directly.

[build-dependencies]
prost-build = "0.12" 
protobuf-codegen = "3.7.2"

[dev-dependencies]
approx = "0.5.1"
rand = "0.9.1"
